force-app/main/default/objects/amazonconnect__AC_VoicemailDrop__c/fields/amazonconnect__Language__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Language__c</fullName>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amazonconnect__AC_VoicemailDropLanguage</valueSetName>
    </valueSet>
</CustomField>