force-app/main/default/objects/amazonconnect__AC_VoicemailDrop__c/fields/amazonconnect__Message__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>