force-app/main/default/objects/amazonconnect__AC_VoicemailDrop__c/fields/amazonconnect__Selected__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>