force-app/main/default/objects/amazonconnect__AC_VoicemailDrop__c/fields/amazonconnect__Voice__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Voice__c</fullName>
    <label>Voice</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>amazonconnect__Language__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>amazonconnect__AC_VoicemailDropVoice</valueSetName>
    </valueSet>
</CustomField>